--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>jQuery Style Switcher</title>
-
+        <script
+          src="https://code.jquery.com/jquery-3.3.1.min.js"
+          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+          crossorigin="anonymous"></script>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+        <script rel="stylesheet" src="jquery.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -30,13 +33,13 @@
 
             <div class="row margin-top-20">
                 <div class="col-sm-4">
-                    <div class="changing-divs"></div>
+                    <div id="change-red-div" class="changing-divs"></div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="changing-divs"></div>
+                    <div id="change-green-div" class="changing-divs"></div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="changing-divs"></div>
+                    <div id="change-blue-div" class="changing-divs"></div>
                 </div>
             </div>
 
@@ -54,13 +57,13 @@
 
             <div class="row margin-top-20">
                 <div class="col-sm-4">
-                    <div class="changing-divs"></div>
+                    <div id="make-big-div" class="changing-divs"></div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="changing-divs"></div>
+                    <div id="make-small-div" class="changing-divs"></div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="changing-divs"></div>
+                    <div id="make-animate-div" class="changing-divs"></div>
                 </div>
             </div>
 
